deployments/openshift/kustomize/base/www/route.yml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: www
spec:
  host: example.gov.bc.ca
  path: /
  to:
    kind: Service
    name: www
    weight: 100
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
