deployments/openshift/kustomize/base/www/np.yml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-all-ingress-www
spec:
  podSelector:
    matchLabels:
      name: www
  ingress:
    - {}
  policyTypes:
    - Ingress
